// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          High Risk
        </th>
        <th
          className="default-width"
        >
          Low Risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        key="46d98781-7cc4-4c28-8379-a3552a57acfe"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
              onClick={[Function]}
            >
              Yen Phu Ward
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          7
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width"
        >
          15
        </td>
      </tr>
      <tr
        key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
      >
        <td
          className="default-width"
        >
          <Link
            to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
          >
            <a
              href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
              onClick={[Function]}
            >
              Muong Thin
            </a>
          </Link>
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          0
        </td>
      </tr>
      <tr
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total(
          Province
          )
        </td>
        <td
          className="default-width "
        >
          7
        </td>
        <td
          className="default-width "
        >
          2
        </td>
        <td
          className="default-width "
        >
          6
        </td>
        <td
          className="default-width"
        >
          15
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 2`] = `
<tbody
  id="body"
>
  <tr
    key="46d98781-7cc4-4c28-8379-a3552a57acfe"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/2/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/2/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
          onClick={[Function]}
        >
          Yen Phu Ward
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
  <tr
    key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/2/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/2/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
          onClick={[Function]}
        >
          Muong Thin
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 3`] = `
<tbody
  id="body"
>
  <tr
    key="46d98781-7cc4-4c28-8379-a3552a57acfe"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/3/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/3/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
          onClick={[Function]}
        >
          Yen Phu Ward
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
  <tr
    key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/3/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/3/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
          onClick={[Function]}
        >
          Muong Thin
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 4`] = `
<tbody
  id="body"
>
  <tr
    key="46d98781-7cc4-4c28-8379-a3552a57acfe"
  >
    <td
      className="default-width"
    >
      Yen Phu Ward
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
  <tr
    key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
  >
    <td
      className="default-width"
    >
      Muong Thin
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Village
      )
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 5`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 6`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 7`] = `
<tbody
  id="body"
>
  <tr
    key="46d98781-7cc4-4c28-8379-a3552a57acfe"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
          onClick={[Function]}
        >
          Yen Phu Ward
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
  <tr
    key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
          onClick={[Function]}
        >
          Muong Thin
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 8`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 9`] = `
<tbody
  id="body"
>
  <tr
    key="46d98781-7cc4-4c28-8379-a3552a57acfe"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/46d98781-7cc4-4c28-8379-a3552a57acfe/3"
          onClick={[Function]}
        >
          Yen Phu Ward
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
  <tr
    key="18ee2dfd-8a59-412d-943f-b9fd10ca4209"
  >
    <td
      className="default-width"
    >
      <Link
        to="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
      >
        <a
          href="/hierarchicaldata/pregnancy/high_risk/Total Pregnancies/1/down/18ee2dfd-8a59-412d-943f-b9fd10ca4209/3"
          onClick={[Function]}
        >
          Muong Thin
        </a>
      </Link>
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      7
    </td>
    <td
      className="default-width "
    >
      2
    </td>
    <td
      className="default-width "
    >
      6
    </td>
    <td
      className="default-width"
    >
      15
    </td>
  </tr>
</tbody>
`;
